--- a/index.html
+++ b/index.html
@@ -19,29 +19,36 @@
     <!-- [BEGIN] PAYMENT METHODS GRID   -->
     <section id="methodsContainer" class="flex-container">
       <div id="method1" class="card" data-method="CREDITCARD" data-amountrange="10 EUR to 100 EUR" data-selected=true
-        data-amount="" data-error="Amount out of range" data-predefinedamounts="20:30:40" data-defaultamount="10" data-currency="EUR"
-        data-custompaymentmethod="" data-errors="" data-customfield="fullCard" data-logo="img/1.png"
-        data-customfieldvalue=[1,3,4,5] data-amountlabel="Amount">
+        data-amount="" data-error="TODO: handle errors" data-predefinedamounts="20:30:40" data-defaultamount="10"
+        data-currency="EUR" data-custompaymentmethod="" data-customfield="fullCard" data-logo="img/1.png"
+        data-customfieldvalue="1:2:3:4:5" data-amountlabel="Amount"
+        data-fullcardplaceholder="Card Number:Name on card:MM:YY:CVV2/CVC"
+        data-fullcardlabels="Card Number:Card Holder:EXP/MM:EXP/YY:CVV2/CVC"
+        data-labels='{"submit":"Submit", "cancel":"Cancel"}'>
         <img src="img/1.png">
         <p>Credit Card</p>
       </div>
       <div id="method2" class="card" data-amount="" data-predefinedamounts="20:30:40" data-defaultamount="10"
-        data-currency="EUR" data-amountlabel="Amount" data-custompaymentmethod="CREDTICARD-2" data-errors="" data-customfield="cardPan" data-logo="img/2.png">
+        data-currency="EUR" data-amountlabel="Amount" data-custompaymentmethod="CREDTICARD-2" data-errors=""
+        data-customfield="cardPan" data-logo="img/2.png">
         <img src="img/2.png">
         <p>Custom card Method</p>
       </div>
-      <div id="method2" class="card" data-amount="" data-predefinedamounts="20:30:40" data-defaultamount="10" data-logo="img/3.png"
-        data-currency="EUR" data-amountlabel="Amount" data-custompaymentmethod="MOBILEPAY" data-errors="" data-customfield="accountId">
+      <div id="method2" class="card" data-amount="" data-predefinedamounts="20:30:40" data-defaultamount="10"
+        data-logo="img/3.png" data-currency="EUR" data-amountlabel="Amount" data-custompaymentmethod="MOBILEPAY"
+        data-errors="" data-customfield="accountId">
         <img src="img/3.png">
         <p>Custom Mobile</p>
       </div>
-      <div id="method2" class="card" data-amount="" data-method="ANOTHERMETHOD" data-predefinedamounts="20:30:40" data-logo="img/4.png"
-        data-defaultamount="10" data-amountlabel="Amount" data-currency="EUR" data-custompaymentmethod="" data-errors="" data-customfield="">
+      <div id="method2" class="card" data-amount="" data-method="ANOTHERMETHOD" data-predefinedamounts="20:30:40"
+        data-logo="img/4.png" data-defaultamount="10" data-amountlabel="Amount" data-currency="EUR"
+        data-custompaymentmethod="" data-errors="" data-customfield="">
         <img src="img/4.png">
         <p>Regular</p>
       </div>
-      <div id="method2" class="card" data-amountlabel="Amount" data-amount="" data-predefinedamounts="20:30:40" data-defaultamount="10"
-        data-currency="EUR" data-custompaymentmethod="CREDTICARD-3" data-errors="1" data-customfield="phone" data-logo="img/5.png">
+      <div id="method2" class="card" data-amountlabel="Amount" data-amount="" data-predefinedamounts="20:30:40"
+        data-defaultamount="10" data-currency="EUR" data-custompaymentmethod="CREDTICARD-3" data-errors="1"
+        data-customfield="phone" data-logo="img/5.png">
         <img src="img/5.png">
         <p>Custom card - error</p>
       </div>
