add custom field builder, fix css media query

--- a/index.html
+++ b/index.html
@@ -18,57 +18,124 @@
 
     <!-- [BEGIN] PAYMENT METHODS GRID   -->
     <section id="methodsContainer" class="flex-container">
+      <!-- CARD1 -->
       <div id="method1" class="card" data-method="CREDITCARD" data-amountrange="10 EUR to 100 EUR" data-selected=true
         data-amount="" data-error="TODO: handle errors" data-predefinedamounts="20:30:40" data-defaultamount="10"
         data-currency="EUR" data-custompaymentmethod="" data-customfield="fullCard" data-logo="img/1.png"
         data-customfieldvalue='{"token1":"4000xxxxxxx0002", "token2":"4000xxxxxxx0001", "token3":"4111xxxxxxx1111"}'
-        data-amountlabel="Amount"
+        data-customfieldregex="" data-customfieldplaceholder=""
+        data-customfieldlabel="Account Id"
         data-fullcardplaceholder='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
         data-fullcardlabels='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
         data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
-        data-textunderamount="Small text under amount" >
+        data-textunderamount="Small text under amount">
         <img src="img/1.png">
-        <p>Credit Card</p>
+        <p>Full Card</p>
       </div>
-      <div id="method2" class="card" data-amount="" data-predefinedamounts="20:30:40" data-defaultamount="10"
-        data-currency="EUR" data-amountlabel="Amount" data-custompaymentmethod="CREDTICARD-2" data-errors=""
-        data-customfield="cardPan" data-logo="img/2.png">
+
+      <!-- CARD2 -->
+      <div id="method2" class="card" data-method="METHOD2" data-amountrange="10 EUR to 100 EUR"
+        data-amount="" data-error="TODO: handle errors" data-predefinedamounts="20:30:40" data-defaultamount="10"
+        data-currency="EUR" data-custompaymentmethod="" data-customfield="accountId" data-logo="img/2.png"
+        data-customfieldvalue='{"1":"123456789", "2":"3334444666", "3":"444222999"}'
+        data-customfieldregex="[0-9]" data-customfieldplaceholder="Account Id"
+        data-customfieldlabel="Account Id"
+        data-fullcardplaceholder='{}'
+        data-fullcardlabels='{}'
+        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
+        data-textunderamount="Small text under amount">
         <img src="img/2.png">
-        <p>Custom card Method</p>
+        <p>Account Id</p>
       </div>
-      <div id="method2" class="card" data-amount="" data-predefinedamounts="20:30:40" data-defaultamount="10"
-        data-logo="img/3.png" data-currency="EUR" data-amountlabel="Amount" data-custompaymentmethod="MOBILEPAY"
-        data-errors="" data-customfield="accountId">
+
+      <!-- CARD3 -->
+      <div id="method3" class="card" data-method="METHOD3" data-amountrange="10 EUR to 100 EUR"
+        data-amount="" data-error="TODO: handle errors" data-predefinedamounts="20:30:40" data-defaultamount="10"
+        data-currency="EUR" data-custompaymentmethod="" data-customfield="cardPan" data-logo="img/3.png"
+        data-customfieldvalue='{"token1":"4000xxxxxxx0002", "token2":"4000xxxxxxx0001", "token3":"4111xxxxxxx1111"}'
+        data-customfieldregex="[0-9]" data-customfieldplaceholder="Card Number"
+        data-customfieldlabel="Card Pan"
+        data-fullcardplaceholder='{}'
+        data-fullcardlabels='{}'
+        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
+        data-textunderamount="Small text under amount">
         <img src="img/3.png">
-        <p>Custom Mobile</p>
+        <p>Credit Card - Card Pan</p>
       </div>
-      <div id="method2" class="card" data-amount="" data-method="ANOTHERMETHOD" data-predefinedamounts="20:30:40"
-        data-logo="img/4.png" data-defaultamount="10" data-amountlabel="Amount" data-currency="EUR"
-        data-custompaymentmethod="" data-errors="" data-customfield="">
+
+      <!-- CARD4 -->
+      <div id="method1" class="card" data-method="METHOD4" data-amountrange="10 EUR to 100 EUR"
+        data-amount="" data-error="TODO: handle errors" data-predefinedamounts="20:30:40" data-defaultamount="10"
+        data-currency="EUR" data-custompaymentmethod="" data-customfield="phone" data-logo="img/4.png"
+        data-customfieldvalue='{}'
+        data-customfieldregex="[0-9]" data-customfieldplaceholder="Phone Number"
+        data-customfieldlabel="Phone Number"
+        data-fullcardplaceholder='{}'
+        data-fullcardlabels='{}'
+        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
+        data-textunderamount="Small text under amount">
         <img src="img/4.png">
-        <p>Regular</p>
+        <p>Phone Number</p>
       </div>
-      <div id="method2" class="card" data-amountlabel="Amount" data-amount="" data-predefinedamounts="20:30:40"
-        data-defaultamount="10" data-currency="EUR" data-custompaymentmethod="CREDTICARD-3" data-errors="1"
-        data-customfield="phone" data-logo="img/5.png">
+
+      <!-- CARD5 -->
+      <div id="method5" class="card" data-method="CREDITCARD" data-amountrange="10 EUR to 100 EUR"
+        data-amount="" data-error="TODO: handle errors" data-predefinedamounts="20:30:40" data-defaultamount="10"
+        data-currency="EUR" data-custompaymentmethod="" data-customfield="fullCard" data-logo="img/5.png"
+        data-customfieldvalue='{"token1":"4000xxxxxxx0002", "token2":"4000xxxxxxx0001", "token3":"4111xxxxxxx1111"}'
+        data-amountlabel="Amount" data-customfieldregex="[0-9]" data-customfieldplaceholder="Account Id"
+        data-customfieldlabel="Account Id"
+        data-fullcardplaceholder='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
+        data-fullcardlabels='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
+        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
+        data-textunderamount="Small text under amount">
         <img src="img/5.png">
-        <p>Custom card - error</p>
+        <p>CARD5</p>
       </div>
-      <div id="method5" class="card" data-logo="img/6.png">
+
+      <!-- CARD6 -->
+      <div id="method6" class="card" data-method="CREDITCARD" data-amountrange="10 EUR to 100 EUR"
+        data-amount="" data-error="TODO: handle errors" data-predefinedamounts="20:30:40" data-defaultamount="10"
+        data-currency="EUR" data-custompaymentmethod="" data-customfield="fullCard" data-logo="img/6.png"
+        data-customfieldvalue='{"token1":"4000xxxxxxx0002", "token2":"4000xxxxxxx0001", "token3":"4111xxxxxxx1111"}'
+        data-amountlabel="Amount" data-customfieldregex="[0-9]" data-customfieldplaceholder="Account Id"
+        data-customfieldlabel="Account Id"
+        data-fullcardplaceholder='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
+        data-fullcardlabels='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
+        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
+        data-textunderamount="Small text under amount">
         <img src="img/6.png">
-        <p>Method 5</p>
+        <p>CARD6</p>
       </div>
-      <div id="method6" class="card" data-logo="img/7.png">
+
+      <!-- CARD7 -->
+      <div id="method7" class="card" data-method="CREDITCARD" data-amountrange="10 EUR to 100 EUR"
+        data-amount="" data-error="TODO: handle errors" data-predefinedamounts="20:30:40" data-defaultamount="10"
+        data-currency="EUR" data-custompaymentmethod="" data-customfield="fullCard" data-logo="img/7.png"
+        data-customfieldvalue='{"token1":"4000xxxxxxx0002", "token2":"4000xxxxxxx0001", "token3":"4111xxxxxxx1111"}'
+        data-amountlabel="Amount" data-customfieldregex="[0-9]" data-customfieldplaceholder="Account Id"
+        data-customfieldlabel="Account Id"
+        data-fullcardplaceholder='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
+        data-fullcardlabels='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
+        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
+        data-textunderamount="Small text under amount">
         <img src="img/7.png">
-        <p>Method 6</p>
+        <p>CARD7</p>
       </div>
-      <div id="method7" class="card" data-logo="img/8.png">
+
+      <!-- CARD8 -->
+      <div id="method8" class="card" data-method="CREDITCARD" data-amountrange="10 EUR to 100 EUR"
+        data-amount="" data-error="TODO: handle errors" data-predefinedamounts="20:30:40" data-defaultamount="10"
+        data-currency="EUR" data-custompaymentmethod="" data-customfield="fullCard" data-logo="img/8.png"
+        data-customfieldvalue='{"token1":"4000xxxxxxx0002", "token2":"4000xxxxxxx0001", "token3":"4111xxxxxxx1111"}'
+        data-amountlabel="Amount" data-customfieldregex="[0-9]" data-customfieldplaceholder="Account Id"
+        data-customfieldlabel="Account Id"
+        data-fullcardplaceholder='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
+        data-fullcardlabels='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
+        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
+        data-textunderamount="Small text under amount">
         <img src="img/8.png">
-        <p>Method 7</p>
-      </div>
-      <div id="method8" class="card" data-logo="img/9.png">
-        <img src="img/9.png">
-        <p>Method 8</p>
+        <p>CARD8</p>
       </div>
     </section>
     <!-- [END] PAYMENT METHODS GRID   -->
