--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
       <!-- CARD6 -->
       <div id="method6" class="card" data-method="CREDITCARD" data-amountrange="10 EUR to 100 EUR"
-        data-amount="" data-error="TODO: handle errors" data-predefinedamounts="20:30:40" data-defaultamount="10"
+        data-amount="" data-error="TODO: handle errors" data-predefinedamounts="" data-defaultamount="10"
         data-currency="EUR" data-custompaymentmethod="" data-customfield="fullCard" data-logo="img/6.png"
         data-customfieldvalue='{"token1":"4000xxxxxxx0002", "token2":"4000xxxxxxx0001", "token3":"4111xxxxxxx1111"}'
         data-amountlabel="Amount" data-customfieldregex="[0-9]" data-customfieldplaceholder="Account Id"
