Add hidden input, change cancel link position

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         data-fullcardplaceholder='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
         data-fullcardlabels='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
         data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
-        data-textunderamount="Small text under amount">
+        data-textunderamount="Small text under amount" data-token="1111111111111111111111111111111111111">
         <img src="img/1.png">
         <p>Full Card</p>
       </div>
@@ -43,7 +43,8 @@
         data-fullcardplaceholder='{}'
         data-fullcardlabels='{}'
         data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
-        data-textunderamount="Small text under amount">
+        data-textunderamount="Small text under amount"
+        data-token="1111111111111111111111111111111111111">
         <img src="img/2.png">
         <p>Account Id</p>
       </div>
@@ -54,7 +55,7 @@
         data-currency="EUR" data-custompaymentmethod="" data-customfield="cardPan" data-logo="img/3.png"
         data-customfieldvalue='{"token1":"4000xxxxxxx0002", "token2":"4000xxxxxxx0001", "token3":"4111xxxxxxx1111"}'
         data-customfieldregex="[0-9]" data-customfieldplaceholder="Card Number"
-        data-customfieldlabel="Card Pan"
+        data-customfieldlabel="Card Pan" data-token="1111111111111111111111111111111111111"
         data-fullcardplaceholder='{}'
         data-fullcardlabels='{}'
         data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
@@ -69,7 +70,7 @@
         data-currency="EUR" data-custompaymentmethod="" data-customfield="phone" data-logo="img/4.png"
         data-customfieldvalue='{}'
         data-customfieldregex="[0-9]" data-customfieldplaceholder="Phone Number"
-        data-customfieldlabel="Phone Number"
+        data-customfieldlabel="Phone Number" data-token="1111111111111111111111111111111111111"
         data-fullcardplaceholder='{}'
         data-fullcardlabels='{}'
         data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
@@ -84,7 +85,7 @@
         data-currency="EUR" data-custompaymentmethod="" data-customfield="fullCard" data-logo="img/5.png"
         data-customfieldvalue='{"token1":"4000xxxxxxx0002", "token2":"4000xxxxxxx0001", "token3":"4111xxxxxxx1111"}'
         data-amountlabel="Amount" data-customfieldregex="[0-9]" data-customfieldplaceholder="Account Id"
-        data-customfieldlabel="Account Id"
+        data-customfieldlabel="Account Id" data-token="1111111111111111111111111111111111111"
         data-fullcardplaceholder='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
         data-fullcardlabels='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
         data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
@@ -99,7 +100,7 @@
         data-currency="EUR" data-custompaymentmethod="" data-customfield="fullCard" data-logo="img/6.png"
         data-customfieldvalue='{"token1":"4000xxxxxxx0002", "token2":"4000xxxxxxx0001", "token3":"4111xxxxxxx1111"}'
         data-amountlabel="Amount" data-customfieldregex="[0-9]" data-customfieldplaceholder="Account Id"
-        data-customfieldlabel="Account Id"
+        data-customfieldlabel="Account Id" data-token="1111111111111111111111111111111111111"
         data-fullcardplaceholder='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
         data-fullcardlabels='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
         data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
@@ -114,7 +115,7 @@
         data-currency="EUR" data-custompaymentmethod="" data-customfield="fullCard" data-logo="img/7.png"
         data-customfieldvalue='{"token1":"4000xxxxxxx0002", "token2":"4000xxxxxxx0001", "token3":"4111xxxxxxx1111"}'
         data-amountlabel="Amount" data-customfieldregex="[0-9]" data-customfieldplaceholder="Account Id"
-        data-customfieldlabel="Account Id"
+        data-customfieldlabel="Account Id" data-token="1111111111111111111111111111111111111"
         data-fullcardplaceholder='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
         data-fullcardlabels='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
         data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
@@ -129,7 +130,7 @@
         data-currency="EUR" data-custompaymentmethod="" data-customfield="fullCard" data-logo="img/8.png"
         data-customfieldvalue='{"token1":"4000xxxxxxx0002", "token2":"4000xxxxxxx0001", "token3":"4111xxxxxxx1111"}'
         data-amountlabel="Amount" data-customfieldregex="[0-9]" data-customfieldplaceholder="Account Id"
-        data-customfieldlabel="Account Id"
+        data-customfieldlabel="Account Id" data-token="1111111111111111111111111111111111111"
         data-fullcardplaceholder='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
         data-fullcardlabels='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
         data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
@@ -139,7 +140,9 @@
       </div>
     </section>
     <!-- [END] PAYMENT METHODS GRID   -->
+    <a class="cancel-link mb-8em" href="https://www.google.com">Cancel</a>
   </main>
+  <div class="overlay hidden"></div>
   <script type="text/javascript" src="cleave.min.js"></script>
   <script type="text/javascript" src="main.js"></script>
 </body>
