fix condition to build/draw input or select field

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div id="method7" class="card" data-method="CREDITCARD" data-amountrange="10 EUR to 100 EUR"
         data-amount="" data-error="TODO: handle errors" data-predefinedamounts="20:30:40" data-defaultamount="10"
         data-currency="EUR" data-custompaymentmethod="" data-customfield="fullCard" data-logo="img/7.png"
-        data-customfieldvalue='{"token1":"4000xxxxxxx0002", "token2":"4000xxxxxxx0001", "token3":"4111xxxxxxx1111"}'
+        data-customfieldvalue='{}'
         data-amountlabel="Amount" data-customfieldregex="[0-9]" data-customfieldplaceholder="Account Id"
         data-customfieldlabel="Account Id" data-token="1111111111111111111111111111111111111"
         data-fullcardplaceholder='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
@@ -128,7 +128,7 @@
       <div id="method8" class="card" data-method="CREDITCARD" data-amountrange="10 EUR to 100 EUR"
         data-amount="" data-error="TODO: handle errors" data-predefinedamounts="20:30:40" data-defaultamount="10"
         data-currency="EUR" data-custompaymentmethod="" data-customfield="fullCard" data-logo="img/8.png"
-        data-customfieldvalue='{"token1":"4000xxxxxxx0002", "token2":"4000xxxxxxx0001", "token3":"4111xxxxxxx1111"}'
+        data-customfieldvalue='{}'
         data-amountlabel="Amount" data-customfieldregex="[0-9]" data-customfieldplaceholder="Account Id"
         data-customfieldlabel="Account Id" data-token="1111111111111111111111111111111111111"
         data-fullcardplaceholder='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
