refactor full card form, add cleave format

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         data-customfieldlabel="Account Id"
         data-fullcardplaceholder='{}'
         data-fullcardlabels='{}'
+        data-customfieldtitle="Validation text"
         data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
         data-textunderamount="Small text under amount"
         data-token="1111111111111111111111111111111111111">
@@ -73,6 +74,7 @@
         data-customfieldlabel="Phone Number" data-token="1111111111111111111111111111111111111"
         data-fullcardplaceholder='{}'
         data-fullcardlabels='{}'
+        data-customfieldtitle="Validation text"
         data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
         data-textunderamount="Small text under amount">
         <img src="img/4.png">
