add back to saved values action, fix CSS

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         data-customfieldlabel="Account Id"
         data-fullcardplaceholder='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
         data-fullcardlabels='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
-        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
+        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data", "back": "Back"}'
         data-textunderamount="Small text under amount" data-token="1111111111111111111111111111111111111">
         <img src="img/1.png">
         <p>Full Card</p>
@@ -43,7 +43,7 @@
         data-fullcardplaceholder='{}'
         data-fullcardlabels='{}'
         data-customfieldtitle="Validation text"
-        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
+        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data", "back": "Back"}'
         data-textunderamount="Small text under amount"
         data-token="1111111111111111111111111111111111111">
         <img src="img/2.png">
@@ -59,7 +59,7 @@
         data-customfieldlabel="Card Pan" data-token="1111111111111111111111111111111111111"
         data-fullcardplaceholder='{}'
         data-fullcardlabels='{}'
-        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
+        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data", "back": "Back"}'
         data-textunderamount="Small text under amount">
         <img src="img/3.png">
         <p>Credit Card - Card Pan</p>
@@ -75,7 +75,7 @@
         data-fullcardplaceholder='{}'
         data-fullcardlabels='{}'
         data-customfieldtitle="Validation text"
-        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
+        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data", "back": "Back"}'
         data-textunderamount="Small text under amount">
         <img src="img/4.png">
         <p>Phone Number</p>
@@ -90,7 +90,7 @@
         data-customfieldlabel="Account Id" data-token="1111111111111111111111111111111111111"
         data-fullcardplaceholder='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
         data-fullcardlabels='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
-        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
+        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data", "back": "Back"}'
         data-textunderamount="Small text under amount">
         <img src="img/5.png">
         <p>CARD5</p>
@@ -105,7 +105,7 @@
         data-customfieldlabel="Account Id" data-token="1111111111111111111111111111111111111"
         data-fullcardplaceholder='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
         data-fullcardlabels='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
-        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
+        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data", "back": "Back"}'
         data-textunderamount="Small text under amount">
         <img src="img/6.png">
         <p>CARD6</p>
@@ -120,7 +120,7 @@
         data-customfieldlabel="Account Id" data-token="1111111111111111111111111111111111111"
         data-fullcardplaceholder='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
         data-fullcardlabels='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
-        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
+        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data", "back": "Back"}'
         data-textunderamount="Small text under amount">
         <img src="img/7.png">
         <p>CARD7</p>
@@ -135,7 +135,7 @@
         data-customfieldlabel="Account Id" data-token="1111111111111111111111111111111111111"
         data-fullcardplaceholder='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
         data-fullcardlabels='{"pan":"Card Number", "holder":"Card Holder", "expiryMonth":"EXP/MM", "expiryYear":"EXP/YY", "cvv":"CVV2/CVC"}'
-        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data"}'
+        data-labels='{"amount":"Amount", "submit":"Submit", "cancel":"Cancel", "addNew":"Add new", "save":"Save data", "back": "Back"}'
         data-textunderamount="Small text under amount">
         <img src="img/8.png">
         <p>CARD8</p>
