hanlde save phone number values

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div id="method1" class="card" data-method="METHOD4" data-amountrange="10 EUR to 100 EUR"
         data-amount="" data-error="TODO: handle errors" data-predefinedamounts="20:30:40" data-defaultamount="10"
         data-currency="EUR" data-custompaymentmethod="" data-customfield="phone" data-logo="img/4.png"
-        data-customfieldvalue='{}'
+        data-customfieldvalue='{"357:92929292":"357:92929292", "357:1111111111111":"357:1111111111111"}'
         data-customfieldregex="[0-9]" data-customfieldplaceholder="Phone Number"
         data-customfieldlabel="Phone Number" data-token="1111111111111111111111111111111111111"
         data-fullcardplaceholder='{}'
