refactor form building, geolocation, set min size to logos

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 <body>
   <main class="container">
     <section id="cashierPaymentForm" class="from-section ">
-
-
+      <form id="cashierForm" class="">
+      <input type="hidden" name="_latitude" class="latitude" />
+      <input type="hidden" name="_longitude" class="longitude" />
+      <input type="hidden" name="_csrf" value="accessToken" />
+    </form>
     </section>
 
     <!-- [BEGIN] PAYMENT METHODS GRID   -->
